<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.googlecode.mvp4g</groupId>
  <artifactId>mailwithmvp4g</artifactId>
  <version>1.5.0</version>
  <packaging>war</packaging>
  <name>MailWithMvp4g</name>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <aopalliance.version>1.0</aopalliance.version>
    <gwt.version>2.6.1</gwt.version>
    <gin.version>2.1.2</gin.version>
    <guice.version>3.0</guice.version>
    <javax.inject.version>1</javax.inject.version>
    <mvp4g.version>1.5.0</mvp4g.version>
    <mgwt.version>2.0.0-rc1</mgwt.version>

    <project.build.sourceDirectory>/src</project.build.sourceDirectory>
    <project.build.testSourceDirectory>/test</project.build.testSourceDirectory>

    <gwt.output>${basedir}/war</gwt.output>
    <gwt.gen>genSources</gwt.gen>
    <gwt.extra>extra</gwt.extra>
  </properties>

  <developers>
    <developer>
      <name>Pierre-Laurent Coirier</name>
    </developer>
    <developer>
      <name>Frank Hossfeld</name>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Javier Sandino</name>
    </contributor>
    <contributor>
      <name>Izzet Mustafayev</name>
    </contributor>
    <contributor>
      <name>Nick Hebner</name>
    </contributor>
    <contributor>
      <name>Harald Schilly</name>
    </contributor>
    <contributor>
      <name>Lukasz Dywicky</name>
    </contributor>
    <contributor>
      <name>Lukas Schmidt</name>
    </contributor>
  </contributors>

  <repositories>
    <repository>
      <id>gwt-sonatype-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/google</url>
      <snapshots><enabled>true</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.googlecode.mvp4g</groupId>
      <artifactId>mvp4g</artifactId>
      <version>${mvp4g.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwt.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>3.2</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>aopalliance</groupId>
      <artifactId>aopalliance</artifactId>
      <version>${aopalliance.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.gwt.inject</groupId>
      <artifactId>gin</artifactId>
      <version>${gin.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <version>${javax.inject.version}</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.mgwt</groupId>
      <artifactId>mgwt</artifactId>
      <version>${mgwt.version}</version>
    </dependency>

  </dependencies>


  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <outputDirectory>${basedir}/war/WEB-INF/classes</outputDirectory>
    <finalName>MailWithMvp4g</finalName>

    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <meminitial>128m</meminitial>
          <maxmem>1024m</maxmem>
          <compilerArgument>-proc:none</compilerArgument>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <downloadSources>true</downloadSources>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.6</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <configuration>
          <attach>true</attach>
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <version>6.1.26</version>
        <configuration>
          <webAppSourceDirectory>${basedir}/target/${project.build.finalName}</webAppSourceDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1.1</version>
        <configuration>
          <warSourceDirectory>${basedir}/war</warSourceDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>2.6.1</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <id>bla</id>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <draftCompile>false</draftCompile>
              <disableClassMetadata>true</disableClassMetadata>
              <compileReport>true</compileReport>
              <warSourceDirectory>${gwt.war}</warSourceDirectory>
              <webappDirectory>${gwt.output}</webappDirectory>
              <gen>${gwt.baseDir}/${gwt.gen}</gen>
              <extra>${gwt.baseDir}/${gwt.extra}</extra>
              <fragmentCount>8</fragmentCount>
              <extraJvmArgs>-Xms1G -Xmx1G -Xss1024k -XX:MaxPermSize=1024m -Dgwt.persistentunitcache=false</extraJvmArgs>
              <localWorkers>7</localWorkers>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <runTarget>MailWithMvp4g.html</runTarget>
          <hostedWebapp>${basedir}/war</hostedWebapp>
        </configuration>
      </plugin>


    </plugins>
  </build>

</project>